the final project

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="reset">RESET</button>
     <div id="wrapper">
-        <div id="container"></div>
+
+        <div id="buttons">
+
+            <button class="reset">RESET</button>
+            <button class="edit">EDIT</button>
+
+        </div>
+
+        <div id="grid"></div>
+
     </div>
 
 </body>
